--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #121212;
+      background-color: #0b0c2a;
       color: #f0f0f0;
     }
     header {
-      background: #1f1f1f;
+      background: #1b1d5d;
       padding: 2rem;
       text-align: center;
+    }
+    header img {
+      width: 120px;
+      border-radius: 50%;
+      margin-bottom: 1rem;
     }
     header h1 {
       margin: 0;
@@ -25,7 +30,7 @@
       margin: 1rem 0;
     }
     nav a {
-      color: #a6e1fa;
+      color: #8ecaff;
       margin: 0 1rem;
       text-decoration: none;
     }
@@ -38,28 +43,35 @@
       border-bottom: 1px solid #333;
       padding-bottom: 0.5rem;
     }
-    .project, .experience, .volunteer {
-      background: #1e1e1e;
+    .project, .experience, .volunteer, .education {
+      background: #1c1e46;
       padding: 1rem;
       margin-bottom: 1rem;
       border-radius: 10px;
+    }
+    .project img {
+      width: 100%;
+      border-radius: 10px;
+      margin-top: 0.5rem;
     }
     footer {
       text-align: center;
       padding: 2rem;
       font-size: 0.9rem;
-      background: #1f1f1f;
+      background: #1b1d5d;
       color: #888;
     }
   </style>
 </head>
 <body>
   <header>
+    <img src="images/profile.jpg" alt="Emilja Beneja">
     <h1>Emilja Beneja</h1>
     <p>AI & Data Science Enthusiast | Computer Engineering Graduate</p>
   </header>
   <nav>
     <a href="#about">About</a>
+    <a href="#education">Education</a>
     <a href="#resume">Resume</a>
     <a href="#projects">Projects</a>
     <a href="#experience">Experience</a>
@@ -69,29 +81,51 @@
   
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm Emilja, a Computer Engineering graduate currently studying Applied AI in Toronto. I'm passionate about using machine learning, data analytics, and deep learning to solve real-world problems and make technology smarter and more accessible.</p>
+    <p>I’m Emilja, a Computer Engineering graduate currently studying Applied AI at George Brown College in Toronto. My passion lies in using artificial intelligence to solve complex real-world problems — from healthcare diagnostics to mental health prediction. I have hands-on experience in data analytics, machine learning, and deep learning, with a growing focus on responsible AI. I’ve led and contributed to research-based projects involving medical image classification, RNA data analysis, and stress/depression assessment. With strong communication, leadership, and teamwork skills, I aim to make a meaningful impact in the field of AI and contribute to technologies that matter.</p>
+  </section>
+
+  <section id="education">
+    <h2>Education</h2>
+    <div class="education">
+      <strong>Applied AI Solutions Development</strong><br>
+      George Brown College – Toronto, ON<br>
+      <em>September 2024 – Present</em>
+    </div>
+    <div class="education">
+      <strong>Bachelor of Computer Engineering, Graduated with Honors</strong><br>
+      Epoka University – Tirana, Albania<br>
+      <em>October 2021 – July 2024</em><br>
+      Thesis: “Detection of Brain Diseases from MRI and CT scans using Machine Learning Algorithms.”
+    </div>
   </section>
 
   <section id="resume">
     <h2>Resume</h2>
-    <p><a href="Resume_EmiljaBeneja.pdf" target="_blank" style="color:#a6e1fa;">Download Resume (PDF)</a></p>
+    <p><a href="Resume_EmiljaBeneja.pdf" target="_blank" style="color:#8ecaff;">Download Resume (PDF)</a></p>
     <iframe src="Resume_EmiljaBeneja.pdf" width="100%" height="600px"></iframe>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
     <div class="project">
+      <h3>EnzymesClassification</h3>
+      <p>Built a classification model for enzymes using curated datasets and deep learning. Applied feature selection and visualization techniques to ensure optimal accuracy and interpretability.</p>
+      <img src="images/enzymes.jpg" alt="Enzymes Project">
+    </div>
+    <div class="project">
       <h3>Brain Disease Detection from MRI & CT</h3>
       <p>Applied various ML & DL algorithms to medical imaging data, achieving over 90% accuracy. Explored applications in neuroscience.</p>
-      <p><a href="https://github.com/EmiljaB" target="_blank">View on GitHub</a></p>
+      <img src="images/brain.jpg" alt="Brain Project">
     </div>
     <div class="project">
       <h3>Tumor Classification with RNA-Seq</h3>
-      <p>Applied dimensionality reduction and ML to achieve near-perfect classification accuracy.</p>
+      <p>Applied dimensionality reduction and ML to RNA data, achieving near-perfect classification accuracy.</p>
+      <img src="images/tumor.jpg" alt="Tumor Project">
     </div>
     <div class="project">
-      <h3>AI-Powered Depression Assessment Web Form</h3>
+      <h3>AI-Powered Depression Assessment</h3>
       <p>Preprocessed mental health data and trained TabNet model to predict depression with 94% accuracy. Integrated into web form.</p>
+      <img src="images/mental_health.jpg" alt="Mental Health Project">
     </div>
   </section>
 
@@ -104,6 +138,10 @@
     <div class="experience">
       <h3>Teaching Assistant – alphaPlan</h3>
       <p>Taught Python to high schoolers, coordinated lesson planning and supported a teaching team in delivering content.</p>
+    </div>
+    <div class="experience">
+      <h3>Part-time Associate – Shoppers Drug Mart</h3>
+      <p>Working part-time in Toronto since March 2025, contributing to store operations and customer service.</p>
     </div>
   </section>
 
@@ -121,6 +159,7 @@
 
   <section id="contact">
     <h2>Contact</h2>
+    <p>Phone: (416) 897-3409</p>
     <p>Email: emiljabeneja11@gmail.com</p>
     <p>GitHub: <a href="https://github.com/EmiljaB" target="_blank">github.com/EmiljaB</a></p>
   </section>
