--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <a href="#volunteer">Volunteering</a>
     <a href="#contact">Contact</a>
   </nav>
-  
+
   <section id="about">
     <h2>About Me</h2>
     <p>I’m Emilja, a Computer Engineering graduate currently studying Applied AI at George Brown College in Toronto. My passion lies in using artificial intelligence to solve complex real-world problems — from healthcare diagnostics to mental health prediction. I have hands-on experience in data analytics, machine learning, and deep learning, with a growing focus on responsible AI. I’ve led and contributed to research-based projects involving medical image classification, RNA data analysis, and stress/depression assessment. With strong communication, leadership, and teamwork skills, I aim to make a meaningful impact in the field of AI and contribute to technologies that matter.</p>
@@ -107,24 +107,39 @@
 
   <section id="projects">
     <h2>Projects</h2>
+
     <div class="project">
       <h3>EnzymesClassification</h3>
-      <p>Built a classification model for enzymes using curated datasets and deep learning. Applied feature selection and visualization techniques to ensure optimal accuracy and interpretability.</p>
+      <p>Classification of enzymes using Machine Learning and Deep Learning techniques to determine the best-performing models for complex biological data.</p>
+      <p><strong>Dataset:</strong> Privately owned, ~300 instances, 40 features, well-balanced across 6 enzyme types. Despite scaling, data complexity was high.</p>
+      <p><strong>Techniques:</strong> Feature Selection followed by traditional (SVM, KNN, DT, RF, NB, LR) and deep learning models (MLPs, CNN, FCNN, RNN).</p>
+      <p><strong>Result:</strong> FCNN outperformed all others, showing deep models are best suited for high-complexity data.</p>
       <img src="images/enzymes.jpg" alt="Enzymes Project">
     </div>
+
     <div class="project">
       <h3>Brain Disease Detection from MRI & CT</h3>
-      <p>Applied various ML & DL algorithms to medical imaging data, achieving over 90% accuracy. Explored applications in neuroscience.</p>
+      <p>Developed a system to detect brain diseases using MRI and CT scan images, applying both ML and DL techniques. Part of Bachelor's thesis.</p>
+      <p><strong>Models:</strong> LBP, GLCM, SVM, MLP, CNN, ResNet, UNET. Visualizations and segmentation masks created for interpretation.</p>
+      <p><strong>Result:</strong> Achieved over 90% accuracy, with strong implications for AI-based diagnostic support.</p>
       <img src="images/brain.jpg" alt="Brain Project">
     </div>
+
     <div class="project">
       <h3>Tumor Classification with RNA-Seq</h3>
-      <p>Applied dimensionality reduction and ML to RNA data, achieving near-perfect classification accuracy.</p>
+      <p>Classified tumor types from high-dimensional gene expression data using dimensionality reduction and ML techniques.</p>
+      <p><strong>Dataset:</strong> RNA-Seq PANCAN from UCI ML Repository, includes BRCA, KIRC, COAD, LUAD, PRAD tumor types.</p>
+      <p><strong>Techniques:</strong> Dimensionality Reduction (PCA, t-SNE, UMAP) + ML classifiers.</p>
+      <p><strong>Focus:</strong> Improving interpretability, visual separation, and classifier performance.</p>
       <img src="images/tumor.jpg" alt="Tumor Project">
     </div>
+
     <div class="project">
-      <h3>AI-Powered Depression Assessment</h3>
-      <p>Preprocessed mental health data and trained TabNet model to predict depression with 94% accuracy. Integrated into web form.</p>
+      <h3>Mental Health Depression Prediction</h3>
+      <p>Used deep learning to predict depression risks from a real-world mental health dataset. Participated in a Kaggle competition to explore insights from mental health records.</p>
+      <p><strong>Dataset:</strong> 19 features including demographics, academic/work pressure, satisfaction, sleep, financial stress, suicidal thoughts, CGPA.</p>
+      <p><strong>Techniques:</strong> Preprocessing, feature engineering, visualization, TabNet model training.</p>
+      <p><strong>Result:</strong> Achieved 94% accuracy and integrated model into a web prototype.</p>
       <img src="images/mental_health.jpg" alt="Mental Health Project">
     </div>
   </section>
@@ -162,6 +177,7 @@
     <p>Phone: (416) 897-3409</p>
     <p>Email: emiljabeneja11@gmail.com</p>
     <p>GitHub: <a href="https://github.com/EmiljaB" target="_blank">github.com/EmiljaB</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/emilja-beneja-9526a922b/" target="_blank">linkedin.com/in/emilja-beneja</a></p>
   </section>
 
   <footer>
