--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
       <p><strong>Dataset:</strong> Privately owned, ~300 instances, 40 features, well-balanced across 6 enzyme types. Despite scaling, data complexity was high.</p>
       <p><strong>Techniques:</strong> Feature Selection followed by traditional (SVM, KNN, DT, RF, NB, LR) and deep learning models (MLPs, CNN, FCNN, RNN).</p>
       <p><strong>Result:</strong> FCNN outperformed all others, showing deep models are best suited for high-complexity data.</p>
+      <p><a href="https://github.com/EmiljaB/EnzymesClassification" target="_blank">View Project on GitHub</a></p>
       <img src="images/enzymes.jpg" alt="Enzymes Project">
     </div>
 
@@ -122,6 +123,7 @@
       <p>Developed a system to detect brain diseases using MRI and CT scan images, applying both ML and DL techniques. Part of Bachelor's thesis.</p>
       <p><strong>Models:</strong> LBP, GLCM, SVM, MLP, CNN, ResNet, UNET. Visualizations and segmentation masks created for interpretation.</p>
       <p><strong>Result:</strong> Achieved over 90% accuracy, with strong implications for AI-based diagnostic support.</p>
+      <p><a href="https://github.com/EmiljaB/Brain_Diseases_Classification" target="_blank">View Project on GitHub</a></p>
       <img src="images/brain.jpg" alt="Brain Project">
     </div>
 
@@ -131,6 +133,7 @@
       <p><strong>Dataset:</strong> RNA-Seq PANCAN from UCI ML Repository, includes BRCA, KIRC, COAD, LUAD, PRAD tumor types.</p>
       <p><strong>Techniques:</strong> Dimensionality Reduction (PCA, t-SNE, UMAP) + ML classifiers.</p>
       <p><strong>Focus:</strong> Improving interpretability, visual separation, and classifier performance.</p>
+      <p><a href="https://github.com/EmiljaB/DataMining-Tumor_Classification" target="_blank">View Project on GitHub</a></p>
       <img src="images/tumor.jpg" alt="Tumor Project">
     </div>
 
@@ -140,6 +143,7 @@
       <p><strong>Dataset:</strong> 19 features including demographics, academic/work pressure, satisfaction, sleep, financial stress, suicidal thoughts, CGPA.</p>
       <p><strong>Techniques:</strong> Preprocessing, feature engineering, visualization, TabNet model training.</p>
       <p><strong>Result:</strong> Achieved 94% accuracy and integrated model into a web prototype.</p>
+      <p><a href="https://github.com/fullestsky/Mental-Health-Analysis-Depression-Prediction-" target="_blank">View Project on GitHub</a></p>
       <img src="images/mental_health.jpg" alt="Mental Health Project">
     </div>
   </section>
