--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
   <section id="acknowledgements">
     <h2>Acknowledgements</h2>
     <div class="education">
-      <p><strong>Diploma:</strong> <a href="acknowledgements/Diploma.pdf" target="_blank">View Diploma (PDF)</a></p>
-      <p><strong>University Transcript (Epoka):</strong> <a href="acknowledgements/Epoka Transcript.pdf" target="_blank">View Transcript (PDF)</a></p>
-      <p><strong>Unofficial Transcript (George Brown):</strong> <a href="acknowledgements/Unofficial Transcript.pdf" target="_blank">View Transcript (PDF)</a></p>
-      <p><strong>Certificate:</strong> <a href="acknowledgements/Enterprise_Design_Thinking_Practitioner_Badge.pdf" target="_blank">Enterprise Design Thinking Practitioner</a></p>
+      <p><strong>Diploma:</strong> <a href="Diploma.pdf" target="_blank">View Diploma (PDF)</a></p>
+      <p><strong>University Transcript (Epoka):</strong> <a href="Epoka Transcript.pdf" target="_blank">View Transcript (PDF)</a></p>
+      <p><strong>Unofficial Transcript (George Brown):</strong> <a href="Unofficial Transcript.pdf" target="_blank">View Transcript (PDF)</a></p>
+      <p><strong>Design Thinking Certificate:</strong> <a href="Enterprise_Design_Thinking_Practitioner_Badge.pdf" target="_blank">Enterprise Design Thinking Practitioner</a></p>
     </div>
   </section>
 
