--- a/index.html
+++ b/index.html
@@ -137,6 +137,15 @@
     </div>
 
     <div class="project">
+      <h3>Chest X-Ray Classification</h3>
+      <p>Classified Chest X-Rays into 4 classes: Normal, Pneumonia, Covid-19, Tuberculozis. Applied Image Augmentation to baance the dataset.</p>
+      <p><strong>Techniques:</strong> Image Augmentation, Image size scaling, Gray Scale Level correction.</p>
+      <p><strong>Models:</strong> Pre-Trained ResNet50, Created a hybrid model with CNN and ViT.</p>
+      <p><a href="https://github.com/EmiljaB/Chest_X-Ray_Classification" target="_blank">View Code on GitHub</a></p>
+      <img src="images/Chest.jpg" alt="Chest X-Ray Project">
+    </div>
+
+    <div class="project">
       <h3>Mental Health Depression Prediction</h3>
       <p>Developed a deep learning model to predict depression risk from a real-world mental health dataset (Kaggle comp).</p>
       <p><strong>Features:</strong> Suicidal thoughts, pressure, sleep, family history, CGPA</p>
