--- a/index.html
+++ b/index.html
@@ -82,15 +82,20 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I’m Emilja, a Computer Engineering graduate currently studying Applied AI at George Brown College in Toronto. My passion lies in using artificial intelligence to solve complex real-world problems — from healthcare diagnostics to mental health prediction. I have hands-on experience in data analytics, machine learning, and deep learning, with a growing focus on responsible AI. I’ve led and contributed to research-based projects involving medical image classification, RNA data analysis, and stress/depression assessment. With strong communication, leadership, and teamwork skills, I aim to make a meaningful impact in the field of AI and contribute to technologies that matter.</p>
+    <p>I’m Emilja, currently studying Heralth Informatics at George Brown College in Toronto, with a background in Computer Engineering and AI. My passion lies in using artificial intelligence to solve complex real-world problems — from healthcare diagnostics to mental health prediction. I have hands-on experience in data analytics, machine learning, and deep learning, with a growing focus on responsible AI. I’ve led and contributed to research-based projects involving medical image classification, RNA data analysis, and stress/depression assessment. With strong communication, leadership, and teamwork skills, I aim to make a meaningful impact in the field of AI and contribute to technologies that matter.</p>
   </section>
 
   <section id="education">
     <h2>Education</h2>
     <div class="education">
+      <strong>Health Informatics</strong><br>
+      George Brown College – Toronto, ON<br>
+      <em>September 2025 – Present</em>
+    </div>
+    <div class="education">
       <strong>Applied AI Solutions Development</strong><br>
       George Brown College – Toronto, ON<br>
-      <em>September 2024 – Present</em>
+      <em>September 2024 – August 2025</em>
     </div>
     <div class="education">
       <strong>Bachelor of Computer Engineering, Graduated with Honors</strong><br>
@@ -102,8 +107,8 @@
 
   <section id="resume">
     <h2>Resume</h2>
-    <p><a href="Resume_EmiljaBeneja.pdf" target="_blank" style="color:#8ecaff;">Download Resume (PDF)</a></p>
-    <iframe src="Resume_EmiljaBeneja.pdf" width="100%" height="600px"></iframe>
+    <p><a href="EmiljaBeneja-CV" target="_blank" style="color:#8ecaff;">Download Resume (PDF)</a></p>
+    <iframe src="EmiljaBeneja-CV" width="100%" height="600px"></iframe>
   </section>
 
   <section id="projects">
@@ -166,7 +171,11 @@
       <p>Taught Python to high schoolers, coordinated lesson planning and supported a teaching team in delivering content.</p>
     </div>
     <div class="experience">
-      <h3>Part-time Associate – Shoppers Drug Mart</h3>
+      <h3>AI/ML Engineering (WIL) Intern - Kinectrics</h3>
+      <p>Worked on a Work Integrated Project to develop ROS-based field robot for autonomus mapping and inspection, integrated with AI Agent.</p>
+    </div>
+    <div class="experience">
+      <h3>Part-time Associate/ Beauty Advisor – Shoppers Drug Mart</h3>
       <p>Working part-time in Toronto since March 2025, contributing to store operations and customer service.</p>
     </div>
   </section>
