--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <div class="education">
       <p><strong>Diploma:</strong> <a href="Diploma.pdf" target="_blank">View Diploma (PDF)</a></p>
       <p><strong>University Transcript (Epoka):</strong> <a href="Epoka Transcript.pdf" target="_blank">View Transcript (PDF)</a></p>
-      <p><strong>Unofficial Transcript (George Brown):</strong> <a href="Unofficial Transcript.pdf" target="_blank">View Transcript (PDF)</a></p>
+      <p><strong>Unofficial Transcript (George Brown):</strong> <a href="AI-Transcript.pdf" target="_blank">View Transcript (PDF)</a></p>
       <p><strong>Design Thinking Certificate:</strong> <a href="Enterprise_Design_Thinking_Practitioner_Badge20241127-27-ncb38g.pdf" target="_blank">Enterprise Design Thinking Practitioner</a></p>
     </div>
   </section>
