--- a/index.html
+++ b/index.html
@@ -11,49 +11,55 @@
       background-color: #0b0c2a;
       color: #f0f0f0;
     }
+
     header {
-      background: #1b1d5d;
-      padding: 2rem;
+      background:
+        linear-gradient(rgba(11,12,42,0.75), rgba(11,12,42,0.75)),
+        url("images/neuralnet.jpg") center/cover no-repeat;
+      padding: 4rem 2rem;
       text-align: center;
     }
-    header img {
-      width: 120px;
-      border-radius: 50%;
-      margin-bottom: 1rem;
-    }
+
     header h1 {
       margin: 0;
       font-size: 2.5rem;
     }
+
     nav {
       text-align: center;
       margin: 1rem 0;
     }
+
     nav a {
       color: #8ecaff;
       margin: 0 1rem;
       text-decoration: none;
     }
+
     section {
       max-width: 900px;
       margin: 2rem auto;
       padding: 0 1rem;
     }
+
     h2 {
       border-bottom: 1px solid #333;
       padding-bottom: 0.5rem;
     }
+
     .project, .experience, .volunteer, .education {
       background: #1c1e46;
       padding: 1rem;
       margin-bottom: 1rem;
       border-radius: 10px;
     }
+
     .project img {
       width: 100%;
       border-radius: 10px;
       margin-top: 0.5rem;
     }
+
     footer {
       text-align: center;
       padding: 2rem;
@@ -64,11 +70,12 @@
   </style>
 </head>
 <body>
+
   <header>
-    <img src="images/profile.jpg" alt="Emilja Beneja">
     <h1>Emilja Beneja</h1>
     <p>AI & Data Science Enthusiast | Computer Engineering Graduate</p>
   </header>
+
   <nav>
     <a href="#about">About</a>
     <a href="#education">Education</a>
@@ -82,21 +89,26 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I’m Emilja, currently studying Heralth Informatics at George Brown College in Toronto, with a background in Computer Engineering and AI. My passion lies in using artificial intelligence to solve complex real-world problems — from healthcare diagnostics to mental health prediction. I have hands-on experience in data analytics, machine learning, and deep learning, with a growing focus on responsible AI. I’ve led and contributed to research-based projects involving medical image classification, RNA data analysis, and stress/depression assessment. With strong communication, leadership, and teamwork skills, I aim to make a meaningful impact in the field of AI and contribute to technologies that matter.</p>
+    <p>
+      I’m Emilja, currently studying Health Informatics at George Brown College in Toronto, with a background in Computer Engineering and AI. My passion lies in using artificial intelligence to solve complex real-world problems — from healthcare diagnostics to mental health prediction. I have hands-on experience in data analytics, machine learning, and deep learning, with a growing focus on responsible AI. I’ve led and contributed to research-based projects involving medical image classification, RNA data analysis, and stress/depression assessment. With strong communication, leadership, and teamwork skills, I aim to make a meaningful impact in the field of AI and contribute to technologies that matter.
+    </p>
   </section>
 
   <section id="education">
     <h2>Education</h2>
+
     <div class="education">
       <strong>Health Informatics</strong><br>
       George Brown College – Toronto, ON<br>
       <em>September 2025 – Present</em>
     </div>
+
     <div class="education">
       <strong>Applied AI Solutions Development</strong><br>
       George Brown College – Toronto, ON<br>
       <em>September 2024 – August 2025</em>
     </div>
+
     <div class="education">
       <strong>Bachelor of Computer Engineering, Graduated with Honors</strong><br>
       Epoka University – Tirana, Albania<br>
@@ -107,8 +119,12 @@
 
   <section id="resume">
     <h2>Resume</h2>
-    <p><a href="EmiljaBeneja-CV" target="_blank" style="color:#8ecaff;">Download Resume (PDF)</a></p>
-    <iframe src="EmiljaBeneja-CV" width="100%" height="600px"></iframe>
+    <p>
+      <a href="EmiljaBeneja-CV.pdf" target="_blank" style="color:#8ecaff;">
+        Download Resume (PDF)
+      </a>
+    </p>
+    <iframe src="EmiljaBeneja-CV.pdf" width="100%" height="600px"></iframe>
   </section>
 
   <section id="projects">
@@ -116,45 +132,37 @@
 
     <div class="project">
       <h3>EnzymesClassification</h3>
-      <p>Classification of enzymes using Machine Learning and Deep Learning techniques to determine the best-performing models for complex biological data.</p>
-      <p><strong>Dataset:</strong> Privately owned, ~300 instances, 40 features, well-balanced across 6 enzyme types.</p>
-      <p><strong>Techniques:</strong> Feature Selection, SVM, KNN, Decision Trees, Random Forest, Logistic Regression, CNN, FCNN, MLP, RNN</p>
-      <p><strong>Result:</strong> FCNN achieved the best performance due to dataset complexity.</p>
+      <p>Classification of enzymes using Machine Learning and Deep Learning techniques.</p>
+      <p><strong>Techniques:</strong> SVM, KNN, Random Forest, CNN, FCNN, RNN</p>
+      <p><strong>Result:</strong> FCNN achieved best performance.</p>
       <p><a href="https://github.com/EmiljaB/EnzymesClassification" target="_blank">View Code on GitHub</a></p>
       <img src="images/enzymes.jpg" alt="Enzymes Project">
     </div>
 
     <div class="project">
       <h3>Brain Disease Detection from MRI & CT</h3>
-      <p>Used ML and DL models to classify brain diseases like Alzheimer's, Meningitis, Stroke, and Tumors using CT/MRI scans.</p>
-      <p><strong>Techniques:</strong> Feature Extraction (LBP, GLCM), SVM, MLP, CNN, ResNet, UNET</p>
-      <p><strong>Result:</strong> Achieved over 90% accuracy. Visualizations and UNET masks included.</p>
+      <p>ML/DL models for classifying brain diseases from scans.</p>
       <p><a href="https://github.com/EmiljaB/Brain_Diseases_Classification" target="_blank">View Code on GitHub</a></p>
       <img src="images/brain.jpg" alt="Brain Project">
     </div>
 
     <div class="project">
       <h3>Tumor Classification with RNA-Seq</h3>
-      <p>Classified tumor types using RNA-Seq gene expression data. Applied dimensionality reduction and classification.</p>
-      <p><strong>Techniques:</strong> PCA, t-SNE, UMAP + various classifiers</p>
+      <p>RNA-Seq tumor classification using dimensionality reduction.</p>
       <p><a href="https://github.com/EmiljaB/DataMining-Tumor_Classification" target="_blank">View Code on GitHub</a></p>
       <img src="images/tumor.jpg" alt="Tumor Project">
     </div>
 
     <div class="project">
       <h3>Chest X-Ray Classification</h3>
-      <p>Classified Chest X-Rays into 4 classes: Normal, Pneumonia, Covid-19, Tuberculosis. Applied Image Augmentation to balance the dataset.</p>
-      <p><strong>Techniques:</strong> Image Augmentation, Image size scaling, Gray Scale Level correction.</p>
-      <p><strong>Models:</strong> Pre-Trained ResNet50, Created a hybrid model with CNN and ViT.</p>
+      <p>4-class chest X-ray classification using CNN + ViT.</p>
       <p><a href="https://github.com/EmiljaB/Chest_X-Ray_Classification" target="_blank">View Code on GitHub</a></p>
-      <img src="images/Chest.jpg" alt="Chest X-Ray Project">
+      <img src="images/Chest.jpg" alt="Chest Project">
     </div>
 
     <div class="project">
       <h3>Mental Health Depression Prediction</h3>
-      <p>Developed a deep learning model to predict depression risk from a real-world mental health dataset (Kaggle comp).</p>
-      <p><strong>Features:</strong> Suicidal thoughts, pressure, sleep, family history, CGPA</p>
-      <p><strong>Result:</strong> TabNet model with 94% accuracy.</p>
+      <p>Deep learning model for depression risk prediction.</p>
       <p><a href="https://github.com/fullestsky/Mental-Health-Analysis-Depression-Prediction-" target="_blank">View Code on GitHub</a></p>
       <img src="images/mental_health.jpg" alt="Mental Health Project">
     </div>
@@ -162,56 +170,49 @@
 
   <section id="experience">
     <h2>Work Experience</h2>
+
+    <div class="experience">
+      <h3>AI/ML Engineering (WIL) Intern – Kinectrics</h3>
+      <p>Developed ROS-based field robot for autonomous mapping and inspection.</p>
+    </div>
+
     <div class="experience">
       <h3>IT Support Specialist – Balfin Group</h3>
-      <p>Worked with Dynamics NAV, assisted in database management and client-side support using MySQL.</p>
-    </div>
-    <div class="experience">
-      <h3>Teaching Assistant – alphaPlan</h3>
-      <p>Taught Python to high schoolers, coordinated lesson planning and supported a teaching team in delivering content.</p>
-    </div>
-    <div class="experience">
-      <h3>AI/ML Engineering (WIL) Intern - Kinectrics</h3>
-      <p>Worked on a Work Integrated Project to develop ROS-based field robot for autonomus mapping and inspection, integrated with AI Agent.</p>
-    </div>
-    <div class="experience">
-      <h3>Part-time Associate/ Beauty Advisor – Shoppers Drug Mart</h3>
-      <p>Working part-time in Toronto since March 2025, contributing to store operations and customer service.</p>
+      <p>Database management and enterprise IT support.</p>
     </div>
   </section>
 
   <section id="volunteer">
     <h2>Volunteer Experience</h2>
+
     <div class="volunteer">
       <h3>ICT Bootcamp – Code for Albania</h3>
-      <p>Mentored students in React Native and UX Design; organized events and assisted curriculum development.</p>
+      <p>Mentored students in React Native and UX Design.</p>
     </div>
+
     <div class="volunteer">
       <h3>Red Cross Volunteer</h3>
-      <p>Led donation drives, supported elderly and mentally disabled individuals, and coordinated humanitarian activities.</p>
+      <p>Supported humanitarian activities and donation drives.</p>
     </div>
   </section>
 
   <section id="acknowledgements">
     <h2>Acknowledgements</h2>
-    <div class="education">
-      <p><strong>Diploma:</strong> <a href="Diploma.pdf" target="_blank">View Diploma (PDF)</a></p>
-      <p><strong>University Transcript (Epoka):</strong> <a href="Epoka Transcript.pdf" target="_blank">View Transcript (PDF)</a></p>
-      <p><strong>Unofficial Transcript (George Brown):</strong> <a href="AI-Transcript.pdf" target="_blank">View Transcript (PDF)</a></p>
-      <p><strong>Design Thinking Certificate:</strong> <a href="Enterprise_Design_Thinking_Practitioner_Badge20241127-27-ncb38g.pdf" target="_blank">Enterprise Design Thinking Practitioner</a></p>
-    </div>
+    <p><a href="Diploma.pdf" target="_blank">Diploma</a></p>
+    <p><a href="Epoka Transcript.pdf" target="_blank">Epoka Transcript</a></p>
+    <p><a href="AI-Transcript.pdf" target="_blank">George Brown Transcript</a></p>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Phone: (416) 897-3409</p>
     <p>Email: emiljabeneja11@gmail.com</p>
     <p>GitHub: <a href="https://github.com/EmiljaB" target="_blank">github.com/EmiljaB</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/emilja-beneja-9526a922b/" target="_blank">linkedin.com/in/emilja-beneja</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/emilja-beneja-9526a922b/" target="_blank">LinkedIn</a></p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Emilja Beneja. All rights reserved.</p>
+    <p>&copy; 2025 Emilja Beneja</p>
   </footer>
+
 </body>
 </html>
