--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Emilja Beneja | AI & Data Science Portfolio</title>
+
   <style>
     body {
       margin: 0;
@@ -69,150 +70,217 @@
     }
   </style>
 </head>
+
 <body>
 
-  <header>
-    <h1>Emilja Beneja</h1>
-    <p>AI & Data Science Enthusiast | Computer Engineering Graduate</p>
-  </header>
+<header>
+  <h1>Emilja Beneja</h1>
+  <p>AI & Data Science Enthusiast | Computer Engineering Graduate</p>
+</header>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#education">Education</a>
-    <a href="#resume">Resume</a>
-    <a href="#projects">Projects</a>
-    <a href="#experience">Experience</a>
-    <a href="#volunteer">Volunteering</a>
-    <a href="#acknowledgements">Acknowledgements</a>
-    <a href="#contact">Contact</a>
-  </nav>
+<nav>
+  <a href="#about">About</a>
+  <a href="#education">Education</a>
+  <a href="#resume">Resume</a>
+  <a href="#projects">Projects</a>
+  <a href="#papers">Scholarly Work</a>
+  <a href="#experience">Experience</a>
+  <a href="#volunteer">Volunteering</a>
+  <a href="#acknowledgements">Acknowledgements</a>
+  <a href="#contact">Contact</a>
+</nav>
 
-  <section id="about">
-    <h2>About Me</h2>
+<section id="about">
+  <h2>About Me</h2>
+  <p>
+    I’m Emilja, currently studying Health Informatics at George Brown College in Toronto,
+    with a background in Computer Engineering and AI. My interests focus on applying
+    artificial intelligence to healthcare, mental health, and data-driven decision support.
+    I have experience in machine learning, deep learning, and analytics, and I enjoy working
+    on research-oriented and interdisciplinary projects that emphasize responsible AI.
+  </p>
+</section>
+
+<section id="education">
+  <h2>Education</h2>
+
+  <div class="education">
+    <strong>Health Informatics</strong><br>
+    George Brown College – Toronto, ON<br>
+    <em>September 2025 – Present</em>
+  </div>
+
+  <div class="education">
+    <strong>Applied AI Solutions Development</strong><br>
+    George Brown College – Toronto, ON<br>
+    <em>September 2024 – August 2025</em>
+  </div>
+
+  <div class="education">
+    <strong>Bachelor of Computer Engineering, Graduated with Honors</strong><br>
+    Epoka University – Tirana, Albania<br>
+    <em>October 2021 – July 2024</em><br>
+    Thesis: Detection of Brain Diseases from MRI and CT scans using Machine Learning Algorithms.
+  </div>
+</section>
+
+<section id="resume">
+  <h2>Resume</h2>
+  <p>
+    <a href="EmiljaBeneja-CV.pdf" target="_blank" style="color:#8ecaff;">
+      Download Resume (PDF)
+    </a>
+  </p>
+  <iframe src="EmiljaBeneja-CV.pdf" width="100%" height="600px"></iframe>
+</section>
+
+<section id="projects">
+  <h2>Projects</h2>
+
+  <div class="project">
+    <h3>EnzymesClassification</h3>
+    <p>Classification of enzymes using machine learning and deep learning techniques.</p>
+    <p><strong>Techniques:</strong> SVM, KNN, Random Forest, CNN, FCNN, RNN</p>
+    <p><strong>Result:</strong> FCNN achieved the best performance.</p>
     <p>
-      I’m Emilja, currently studying Health Informatics at George Brown College in Toronto, with a background in Computer Engineering and AI. My passion lies in using artificial intelligence to solve complex real-world problems — from healthcare diagnostics to mental health prediction. I have hands-on experience in data analytics, machine learning, and deep learning, with a growing focus on responsible AI. I’ve led and contributed to research-based projects involving medical image classification, RNA data analysis, and stress/depression assessment. With strong communication, leadership, and teamwork skills, I aim to make a meaningful impact in the field of AI and contribute to technologies that matter.
-    </p>
-  </section>
-
-  <section id="education">
-    <h2>Education</h2>
-
-    <div class="education">
-      <strong>Health Informatics</strong><br>
-      George Brown College – Toronto, ON<br>
-      <em>September 2025 – Present</em>
-    </div>
-
-    <div class="education">
-      <strong>Applied AI Solutions Development</strong><br>
-      George Brown College – Toronto, ON<br>
-      <em>September 2024 – August 2025</em>
-    </div>
-
-    <div class="education">
-      <strong>Bachelor of Computer Engineering, Graduated with Honors</strong><br>
-      Epoka University – Tirana, Albania<br>
-      <em>October 2021 – July 2024</em><br>
-      Thesis: “Detection of Brain Diseases from MRI and CT scans using Machine Learning Algorithms.”
-    </div>
-  </section>
-
-  <section id="resume">
-    <h2>Resume</h2>
-    <p>
-      <a href="EmiljaBeneja-CV.pdf" target="_blank" style="color:#8ecaff;">
-        Download Resume (PDF)
+      <a href="https://github.com/EmiljaB/EnzymesClassification" target="_blank">
+        View Code on GitHub
       </a>
     </p>
-    <iframe src="EmiljaBeneja-CV.pdf" width="100%" height="600px"></iframe>
-  </section>
+    <img src="images/enzymes.jpg" alt="Enzymes Classification Project">
+  </div>
 
-  <section id="projects">
-    <h2>Projects</h2>
+  <div class="project">
+    <h3>Tumor Classification with RNA-Seq</h3>
+    <p>RNA-Seq tumor classification using dimensionality reduction techniques.</p>
+    <p>
+      <a href="https://github.com/EmiljaB/DataMining-Tumor_Classification" target="_blank">
+        View Code on GitHub
+      </a>
+    </p>
+    <img src="images/tumor.jpg" alt="Tumor Classification Project">
+  </div>
 
-    <div class="project">
-      <h3>EnzymesClassification</h3>
-      <p>Classification of enzymes using Machine Learning and Deep Learning techniques.</p>
-      <p><strong>Techniques:</strong> SVM, KNN, Random Forest, CNN, FCNN, RNN</p>
-      <p><strong>Result:</strong> FCNN achieved best performance.</p>
-      <p><a href="https://github.com/EmiljaB/EnzymesClassification" target="_blank">View Code on GitHub</a></p>
-      <img src="images/enzymes.jpg" alt="Enzymes Project">
-    </div>
-<!--
-    <div class="project">
-      <h3>Brain Disease Detection from MRI & CT</h3>
-      <p>ML/DL models for classifying brain diseases from scans.</p>
-      <p><a href="https://github.com/EmiljaB/Brain_Diseases_Classification" target="_blank">View Code on GitHub</a></p>
-      <img src="images/brain.jpg" alt="Brain Project">
-    </div>
--->
-    <div class="project">
-      <h3>Tumor Classification with RNA-Seq</h3>
-      <p>RNA-Seq tumor classification using dimensionality reduction.</p>
-      <p><a href="https://github.com/EmiljaB/DataMining-Tumor_Classification" target="_blank">View Code on GitHub</a></p>
-      <img src="images/tumor.jpg" alt="Tumor Project">
-    </div>
+  <div class="project">
+    <h3>Chest X-Ray Classification</h3>
+    <p>Four-class chest X-ray classification using a hybrid CNN + Vision Transformer model.</p>
+    <p>
+      <a href="https://github.com/EmiljaB/Chest_X-Ray_Classification" target="_blank">
+        View Code on GitHub
+      </a>
+    </p>
+    <img src="images/Chest.jpg" alt="Chest X-Ray Project">
+  </div>
 
-    <div class="project">
-      <h3>Chest X-Ray Classification</h3>
-      <p>4-class chest X-ray classification using CNN + ViT.</p>
-      <p><a href="https://github.com/EmiljaB/Chest_X-Ray_Classification" target="_blank">View Code on GitHub</a></p>
-      <img src="images/Chest.jpg" alt="Chest Project">
-    </div>
+  <div class="project">
+    <h3>Mental Health Depression Prediction</h3>
+    <p>Deep learning model for predicting depression risk from behavioral and demographic data.</p>
+    <p>
+      <a href="https://github.com/fullestsky/Mental-Health-Analysis-Depression-Prediction-" target="_blank">
+        View Code on GitHub
+      </a>
+    </p>
+    <img src="images/mental_health.jpg" alt="Mental Health Project">
+  </div>
+</section>
 
-    <div class="project">
-      <h3>Mental Health Depression Prediction</h3>
-      <p>Deep learning model for depression risk prediction.</p>
-      <p><a href="https://github.com/fullestsky/Mental-Health-Analysis-Depression-Prediction-" target="_blank">View Code on GitHub</a></p>
-      <img src="images/mental_health.jpg" alt="Mental Health Project">
-    </div>
-  </section>
+<section id="papers">
+  <h2>Scholarly Papers & Academic Projects</h2>
 
-  <section id="experience">
-    <h2>Work Experience</h2>
+  <div class="project">
+    <h3>OVIS: PCOS Clinical Decision Support System (CDSS)</h3>
+    <p>
+      Academic group project focused on the design of a clinical decision support system
+      for Polycystic Ovary Syndrome (PCOS), incorporating health informatics workflows,
+      stakeholder analysis, and requirements engineering.
+    </p>
+    <p><strong>Focus:</strong> Health Informatics, CDSS, Clinical Workflows</p>
+    <p>
+      <a href="portfolio-papers/OVIS_PCOS-CDSS.pdf" target="_blank">
+        View Paper (PDF)
+      </a>
+    </p>
+  </div>
 
-    <div class="experience">
-      <h3>AI/ML Engineering (WIL) Intern – Kinectrics</h3>
-      <p>Developed ROS-based field robot for autonomous mapping and inspection.</p>
-    </div>
+  <div class="project">
+    <h3>Scholarly Paper: Gambling Addiction in Digital Health</h3>
+    <p>
+      Analytical paper examining gambling addiction as a mental health issue,
+      with emphasis on digital health interventions, data-driven risk assessment,
+      and ethical considerations.
+    </p>
+    <p><strong>Focus:</strong> Mental Health, Digital Health, Ethics</p>
+    <p>
+      <a href="portfolio-papers/Scholarly-Paper_Gambling Addiction.pdf" target="_blank">
+        View Paper (PDF)
+      </a>
+    </p>
+  </div>
 
-    <div class="experience">
-      <h3>IT Support Specialist – Balfin Group</h3>
-      <p>Database management and enterprise IT support.</p>
-    </div>
-  </section>
+  <div class="project">
+    <h3>Database Management Systems Project</h3>
+    <p>
+      Academic project covering database design, normalization, and system requirements
+      within a structured DBMS environment.
+    </p>
+    <p><strong>Focus:</strong> Database Design, Requirements Engineering</p>
+    <p>
+      <a href="portfolio-papers/DBMS_Project.pdf" target="_blank">
+        View Paper (PDF)
+      </a>
+    </p>
+  </div>
+</section>
 
-  <section id="volunteer">
-    <h2>Volunteer Experience</h2>
+<section id="experience">
+  <h2>Work Experience</h2>
 
-    <div class="volunteer">
-      <h3>ICT Bootcamp – Code for Albania</h3>
-      <p>Mentored students in React Native and UX Design.</p>
-    </div>
+  <div class="experience">
+    <h3>AI / ML Engineering Intern (WIL) – Kinectrics</h3>
+    <p>Worked on ROS-based field robot development for autonomous mapping and inspection.</p>
+  </div>
 
-    <div class="volunteer">
-      <h3>Red Cross Volunteer</h3>
-      <p>Supported humanitarian activities and donation drives.</p>
-    </div>
-  </section>
+  <div class="experience">
+    <h3>IT Support Specialist – Balfin Group</h3>
+    <p>Provided enterprise IT support and assisted with database management.</p>
+  </div>
+</section>
 
-  <section id="acknowledgements">
-    <h2>Acknowledgements</h2>
-    <p><a href="Diploma.pdf" target="_blank">Diploma</a></p>
-    <p><a href="Epoka Transcript.pdf" target="_blank">Epoka Transcript</a></p>
-    <p><a href="AI-Transcript.pdf" target="_blank">George Brown Transcript</a></p>
-  </section>
+<section id="volunteer">
+  <h2>Volunteer Experience</h2>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: emiljabeneja11@gmail.com</p>
-    <p>GitHub: <a href="https://github.com/EmiljaB" target="_blank">github.com/EmiljaB</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/emilja-beneja-9526a922b/" target="_blank">LinkedIn</a></p>
-  </section>
+  <div class="volunteer">
+    <h3>ICT Bootcamp – Code for Albania</h3>
+    <p>Mentored students in React Native development and UX design principles.</p>
+  </div>
 
-  <footer>
-    <p>&copy; 2025 Emilja Beneja</p>
-  </footer>
+  <div class="volunteer">
+    <h3>Red Cross Volunteer</h3>
+    <p>Supported humanitarian activities and community donation drives.</p>
+  </div>
+</section>
+
+<section id="acknowledgements">
+  <h2>Acknowledgements</h2>
+  <p><a href="Diploma.pdf" target="_blank">Diploma</a></p>
+  <p><a href="Epoka Transcript.pdf" target="_blank">Epoka Transcript</a></p>
+  <p><a href="AI-Transcript.pdf" target="_blank">George Brown Transcript</a></p>
+</section>
+
+<section id="contact">
+  <h2>Contact</h2>
+  <p>Email: emiljabeneja11@gmail.com</p>
+  <p>GitHub: <a href="https://github.com/EmiljaB" target="_blank">github.com/EmiljaB</a></p>
+  <p>LinkedIn:
+    <a href="https://www.linkedin.com/in/emilja-beneja-9526a922b/" target="_blank">
+      LinkedIn Profile
+    </a>
+  </p>
+</section>
+
+<footer>
+  <p>&copy; 2025 Emilja Beneja</p>
+</footer>
 
 </body>
 </html>
