--- a/index.html
+++ b/index.html
@@ -217,6 +217,20 @@
     </p>
   </div>
 
+   <div class="project">
+    <h3>Software Engineering Requirements Documentation</h3>
+    <p>
+      Academic project covering software engineering principles design, analysis, implementation 
+      and system requirements documentation.
+    </p>
+    <p><strong>Focus:</strong> Database Design, Requirements Engineering</p>
+    <p>
+      <a href="portfolio-papers/Requirements.pdf" target="_blank">
+        View Paper (PDF)
+      </a>
+    </p>
+  </div>
+
   <div class="project">
     <h3>Database Management Systems Project</h3>
     <p>
@@ -225,7 +239,7 @@
     </p>
     <p><strong>Focus:</strong> Database Design, Requirements Engineering</p>
     <p>
-      <a href="portfolio-papers/DBMS_Project.pdf" target="_blank">
+      <a href="portfolio-papers/DBMS_Project .pdf" target="_blank">
         View Paper (PDF)
       </a>
     </p>
