--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
       border-bottom: 1px solid #333;
       padding-bottom: 0.5rem;
     }
+    .project a {
+  color: #8ecaff;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+  .project a:hover {
+  color: #b6ddff;
+  text-decoration: underline;
+}
 
     .project, .experience, .volunteer, .education {
       background: #1c1e46;
