--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
       background: #1b1d5d;
       color: #888;
     }
+    a {
+  color: #8ecaff;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #b6ddff;
+  text-decoration: underline;
+}
+
   </style>
 </head>
 
