--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ a:hover {
 <section id="resume">
   <h2>Resume</h2>
   <p>
-    <a href="EmiljaBeneja-CV.pdf" target="_blank" style="color:#8ecaff;">
+    <a href="EmiljaBeneja_Resume_UHN.pdf" target="_blank" style="color:#8ecaff;">
       Download Resume (PDF)
     </a>
   </p>
