--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ a:hover {
       Download Resume (PDF)
     </a>
   </p>
-  <iframe src="EmiljaBeneja-CV.pdf" width="100%" height="600px"></iframe>
+  <iframe src="EmiljaBeneja_Resume_UHN.pdf" width="100%" height="600px"></iframe>
 </section>
 
 <section id="projects">
